--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,60 @@
-@import url('../vendor/normalize.css');
-@import url('../vendor/fonts/fonts.css')
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__burger-line/header__burger-line.css);
+@import url(../blocks/header/__burger-line/_second/header__burger-line_second.css);
+@import url(../blocks/header/__burger-line/_third/header__burger-line_third.css);
+@import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__line/intro__line.css);
+@import url(../blocks/intro/__button/intro__button.css);
+@import url(../blocks/intro/__caption-container/intro__caption-container.css);
+@import url(../blocks/intro/__caption/intro__caption.css);
+@import url(../blocks/intro/__image/intro__image.css);
+@import url(../blocks/merckx/merckx.css);
+@import url(../blocks/merckx/__image/merckx__image.css);
+@import url(../blocks/merckx/__container/merckx__container.css);
+@import url(../blocks/merckx/__quote/merckx__quote.css);
+@import url(../blocks/merckx/__quote-author/merckx__quote-author.css);
+@import url(../blocks/merckx/__quote-author-subline/mercks__quote-author-subline.css);
+@import url(../blocks/highway/highway.css);
+@import url(../blocks/highway/__title/highway__title.css);
+@import url(../blocks/highway/__text/highway__text.css);
+@import url(../blocks/highway/__photos/highway__photos.css);
+@import url(../blocks/highway/__photo/highway__photo.css);
+@import url(../blocks/highway/__photo/_relative/highway__photo_relative.css);
+@import url(../blocks/highway/__buttons/highway__buttons.css);
+@import url(../blocks/highway/__button/highway__button.css);
+@import url(../blocks/highway/__svg/highway__svg.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__header/cards__header.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__menu/cards__menu.css);
+@import url(../blocks/cards/__menu-item/cards__menu-item.css);
+@import url(../blocks/cards/__link/cards__link.css);
+@import url(../blocks/cards/__link/_active/cards__link_active.css);
+@import url(../blocks/cards/__grid/cards__grid.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__link/card__link.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__caption/card__caption.css);
+@import url(../blocks/cards/__dotts/cards__dotts.css);
+@import url(../blocks/cards/__dott/cards__dott.css);
+@import url(../blocks/workout/workout.css);
+@import url(../blocks/workout/__title/workout__title.css);
+@import url(../blocks/workout/__image/workout__image.css);
+@import url(../blocks/workout/__text/workout__text.css);
+@import url(../blocks/workout/__list/workout__list.css);
+@import url(../blocks/workout/__list-link/workout__list-link.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__title/footer__title.css);
+@import url(../blocks/footer/__wrapper/footer__wrapper.css);
+@import url(../blocks/footer/__title/footer__title.css);
+@import url(../blocks/footer/__form/footer__form.css);
+@import url(../blocks/footer/__input/footer__input.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
